Istio-learning/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-visualize-v1
  namespace: istio-test
  labels:
    app: istio-tester-v1
spec:
  selector:
    app: istio-tester
    version: v1
  ports:
  - port: 80
    targetPort: 3000
    name: http
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: traffic-visualize-v2
  namespace: istio-test
  labels:
    app: istio-tester-v2
spec:
  selector:
    app: istio-tester
    version: v2
  ports:
  - port: 80
    targetPort: 3000
    name: http
  type: ClusterIP
