Istio-learning/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: istio-tester-route
  namespace: istio-test
spec:
  hostnames:
  - "istio-test.rajesh-kumar.in"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: common-server-gateway
    namespace: common-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: traffic-visualize-v1
      port: 80
      weight: 8
    - group: ""
      kind: Service
      name: traffic-visualize-v2
      port: 80
      weight: 2
    matches:
    - path:
        type: PathPrefix
        value: /
