Istio-learning/istio-basic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: traffic-visualize 
  namespace: istio-test
spec:
  host: traffic-visualize 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: traffic-visualize-internal
  namespace: istio-test
spec:
  hosts:
  - traffic-visualize
  - traffic-visualize.istio-test.svc.cluster.local
  http:
  - route:
    - destination:
        host: traffic-visualize
        subset: v1
      weight: 80
    - destination:
        host: traffic-visualize
        subset: v2
      weight: 20
